# Cogito

./: Cargo.toml  cyberpunk.glb  malek.sks
cloudcafe-client/: Cargo.toml
cloudcafe-client/src/: avatar_networking.rs  connection_manager.rs  main.rs  main_menu.rs  resources.rs  settings_menu.rs
cloudcafe-client/src/other/: audio_connection.rs  avatar_connection.rs  connection_manager.rs  info_connection.rs  mod.rs
cloudcafe-server/: Cargo.toml
cloudcafe-server/src/: audio_networking.rs  avatar_networking.rs  info.rs  main.rs  send_back_address.rs  status.rs
src/: avatar.rs  client.rs  laminar_helper.rs  lib.rs  main.rs  packet.rs  ports.rs  server.rs  window_stuff.rs
src/things/: client.rs  mod.rs  server.rs
subcrates/stereokit-locomotion/: Cargo.toml
subcrates/stereokit-locomotion/src/: lib.rs
subcrates/stereokit-vrm/: Cargo.toml
subcrates/stereokit-vrm/src/: bones.rs  ik.rs  lib.rs  main.rs  toon_shader.hlsl
