[package]
name = "cloudcafe-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
"subcrates/stereokit-vrm", "subcrates/stereokit-locomotion",
    "cloudcafe-client",
    "cloudcafe-server"
]

[dependencies]
glam = {version = "0.22.0", features = ["mint", "serde", "bytemuck"]}
stereokit = { path = "../stereokit-rs", features = ["physics"]}
stereokit-vrm = { path = "./subcrates/stereokit-vrm"}
serde = "1.0.152"
color-eyre = "0.6.2"
mint = {version = "0.5.9", features = ["serde"]}
uflow = { path = "../uflow"}
#nix = "0.26.2"
serde_json = "1.0.93"
crossbeam = "0.8.2"
bincode = "1.3.3"
anarchist-readable-name-generator-lib = "0.1.1"
rand = "0.8.5"
laminar = "0.5.0"
uuid = { version = "1.3.0", features = ["serde"]}
#xcb = {version = "1.2.0", features = ["composite", "x11"]}
#xcb-util = {  version = "0.4.0" , features = ["image", "cursor", "ewmh", "misc", "shm"]}
#x11rb = {version = "0.11.1", features = ["all-extensions"]}
#captis = "0.6.1"
#gltf = {version = "1.1.0", features = ["extras", "default"]}
#mugltf = "0.1.2"
#gltf-json = "1.1.0"
#goth-gltf = { path = "../goth-gltf"}
stereokit-locomotion = { path = "./subcrates/stereokit-locomotion"}