[package]
name = "cloudcafe-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stereokit = { path = "../../stereokit-rs", features = ["physics"]}
color-eyre = "0.6.2"
serde = "1.0.152"
toml = "0.7.2"
glam = {version = "0.23.0", features = ["mint"]}
stereokit-locomotion = { path = "../subcrates/stereokit-locomotion", features = []}
cloudcafe-common = { path = "../../Cogito"}
bincode = "1.3.3"
laminar = "0.5.0"
portpicker = "0.1.1"
stereokit-vrm = { path = "../subcrates/stereokit-vrm"}