[package]
name = "cloudcafe-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudcafe-common = { path = "../../Cogito"}
bincode = "1.3.3"
serde = "1.0.152"
laminar = "0.5.0"
crossbeam = "0.8.2"