[package]
name = "cloudcafe-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudcafe-common = { path = "../../Cogito"}
bincode = "1.3.3"
serde = "1.0.152"
laminar = "0.5.0"
crossbeam = "0.8.2"
uuid = { version = "1.3.0", features = ["serde"]}
dashmap = "5.4.0"
log = "0.4.17"
color-eyre = "0.6.2"
simple_logger = "4.0.0"