[package]
name = "stereokit-locomotion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stereokit = { path = "../../../stereokit-rs"}
glam = { version = "0.22.0", features = ["mint"]}
color-eyre = "0.6.2"